# editor-demo

./: .dockerignore  .editorconfig  .env.production  .flake8  .gitignore  Dockerfile  Pipfile  README.md  bigtree_app.code-workspace  docker-compose.yaml  docker-compose.yml  editor-demo.code-workspace  init.py  manage.py  package-lock.json  package.json  poetry-install.sh  pyproject.toml  tsconfig.json
bigtree_app/: asgi.py  env.py  settings.py  urls.py  wsgi.py
bigtree_app_backend/: api_urls.py  apps.py  routers.py  urls.py  views.py  viewsets.py
bigtree_app_docker/backend/: Dockerfile  requirements.txt
bigtree_app_docker/frontend/: Dockerfile
bigtree_app_docker/webserver/: Dockerfile  (+1 more)
bigtree_app_document/: .env.template  Makefile  clean.py  make.bat  package-lock.json  package.json
bigtree_app_frontend/: .dockerignore  .env.production  .env.production.template  .env.template  .eslintrc  .eslintrc.js  .flowconfig  .gitignore  Dockerfile  README.md  app.json  babel.config.js  babel.config.native.js  babel.config.web.js  common.config.js  config-overrides.js  index.js  jest.config.js  jest.init.js  jsconfig.json  jsdoc.conf.json  metro.config.js  package-lock.json  package.json  stylelint.config.js  tailwind.config.js  test.js  tsconfig.json  typedoc.conf.json  webpack.config.js
bigtree_app_nginx/: Dockerfile
editor-demo/: asgi.py  settings.py  urls.py  wsgi.py
editor-demo_backend/: api.py  apps.py  views.py
editor-demo_document/: clean.py  make.bat  package.json
editor-demo_frontend/: .dockerignore  Dockerfile  app.json  babel.config.common.js  babel.config.js  babel.config.web.js  common.config.js  docker-compose.yml  index.js  index.web.js  jest.init.js  metro.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  typedoc.conf.json  webpack.config.js
editor-demo_nginx/: nginx.conf.template
(+155 files in other folders)
