[tool.poetry]
name = "bigtree_app_template_v2"
version = "0.1.0"
description = ""
authors = ["Daehan Kim <daehankim@ibigtree.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
djangorestframework = "^3.11.0"
python-dotenv = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
sphinx-js = "^2.8"
sphinxcontrib-plantuml = "^0.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
